<resources>
    <string name="app_name">Best Movies App</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail_movie">DetailMovieActivity</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Welcome, </item>
        <item>Top rated movies</item>
        <item>Popular</item>
        <item>Upcoming</item>
        <item>Favorites</item>
        <item>Login</item>
        <item>About</item>
    </string-array>

    <array name="nav_drawer_icons">
        <item></item>
        <item>@drawable/ic_top_rated</item>
        <item>@drawable/ic_popular</item>
        <item>@drawable/ic_upcoming</item>
        <item>@drawable/ic_favorites</item>
        <item>@drawable/ic_login</item>
        <item>@drawable/ic_about</item>

    </array>

    <!--name tabs of fragment-->
    <string name="movie_tab">Movie</string>
    <string name="crew_tab">Crew</string>
    <string name="cast_tab">Cast</string>




    <!--name DetailMovieFragment layout-->
    <string name="original_title_header">Original title</string>
    <string name="original_title">Original Title</string>
    <string name="genre_header">Genre</string>
    <string name="genre_title">Genre Title</string>
    <string name="releasedate_header">Release date</string>
    <string name="release_date_title">Release Date Title</string>
    <string name="vote_average__header">Vote average</string>
    <string name="vote_average_title">Vote Average Title</string>
    <string name="vote_count__header">Vote count</string>
    <string name="vote_count_title">Vote Count Title</string>
    <string name="tag_line_header">Tagline</string>
    <string name="tag_line_title">Tagline Description</string>
    <string name="overview_header">Overview</string>
    <string name="overview_title">Overviw Title</string>
    <string name="production_companies_header">Production companies</string>
    <string name="production_companies_description">Description Prod Comp</string>
    <string name="production_countries_header">Production countries</string>
    <string name="production_countries_description">Description Prod Countries</string>
    <string name="budget">Budget</string>
    <string name="runtime">Runtime</string>
    <string name="revenue">Revenue</string>
    <string name="homepage_header">Homepage</string>
    <string name="homepage_description">Homepage</string>

    <!--name BiographyActorActivity layout -->
    <string name="title_name_actor">Name</string>
    <string name="birthday_title">Birthday</string>
    <string name="deathday_title">Deathday</string>
    <string name="place_birthday_title">Place Birthday</string>
    <string name="biography_title">Biograhpy</string>
    <string name="homepage_actor">Actor homepage</string>
    <string name="nothing_not_found">Nothing not found</string>
    <string name="signIn">Sign in</string>
    <string name="signUp">Sign up</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="search_hint">Find a movie</string>
    <string name="share_via">Share via</string>
    <string name="title_activity_favorites">FavoritesActivity</string>
    <string name="favorites_list">Favorites List</string>
    <string name="title_activity_google_ads">GoogleAdsActivity</string>
    <!-- -
        This is an ad unit ID for a banner test ad. Replace with your own banner ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="banner_ad_unit_id">ca-app-pub-6095509140691405/6662418777</string>
    <string name="guest">" guest!"</string>
    <string name="internet_connection_failed">Internet connection failed</string>
    <string name="search">Search</string>
    <string name="poster_loading_failed">Poster loading failed</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="please_login">Please,  login!</string>
    <string name="film_added">The film has already been added</string>
    <string name="added_fail">Movie Added fail</string>
    <string name="download_failed">Download failed</string>
    <string name="about">About</string>
    <string name="page">"Page "</string>
    <string name="nothing_found">Nothing not found</string>

    <!-- -->
    <array name="titles_pager_tab">
        <item>Movie</item>
        <item>Cast</item>
        <item>Crew</item>
    </array>


</resources>
