<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView_actor_fragment">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/light_green"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView_poster_actor_w154"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/poster_w154"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_title_name_actor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:text="@string/title_name_actor"
                android:textColor="@color/light_gray" />

            <TextView
                android:id="@+id/tv_name_actor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:text="@string/nothing_not_found"
                android:textColor="@color/black"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tv_birthday_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingLeft="4dp"
                android:text="@string/birthday_title"
                android:textColor="@color/light_gray" />

            <TextView
                android:id="@+id/tv_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:text="@string/nothing_not_found"
                android:textColor="@color/black"
                android:textStyle="bold" />



            <TextView
                android:id="@+id/tv_deathday_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingLeft="4dp"
                android:text="@string/deathday_title"
                android:textColor="@color/light_gray" />

            <TextView
                android:id="@+id/tv_deathday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:text="@string/nothing_not_found"
                android:textColor="@color/black"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tv_place_birthday_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingLeft="4dp"
                android:text="@string/place_birthday_title"
                android:textColor="@color/light_gray" />

            <TextView
                android:id="@+id/tv_place_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elegantTextHeight="true"
                android:paddingBottom="4dp"
                android:paddingLeft="4dp"
                android:singleLine="false"
                android:text="@string/nothing_not_found"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/light_green"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_biography_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingLeft="4dp"
            android:text="@string/biography_title"
            android:textColor="@color/light_gray" />

        <TextView
            android:id="@+id/tv_biography_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/nothing_not_found"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/light_green"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_homepage_actor__header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:paddingLeft="4dp"
            android:textColor="@color/light_gray"
            android:text="@string/homepage_actor"/>
        <TextView
            android:id="@+id/tv_homepage_actor_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingBottom="4dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16dp"
            android:text="@string/nothing_not_found"
            android:autoLink="web"
            android:clickable="true"/>
    </LinearLayout>

    <!-- view for AdMob Banner Ad -->
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />
</LinearLayout>

</ScrollView>