<RelativeLayout xmlns:ads="http://schemas.android.com/apk/res-auto"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.pundroid.bestmoviesapp.fragments.DetailMovieActivityFragment">

    <com.pundroid.bestmoviesapp.utils.ScrollViewExt
        android:id="@+id/scrollView_detail_movie"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:weightSum="1">


            <com.inthecheesefactory.thecheeselibrary.widget.AdjustableImageView
                android:id="@+id/image_view_backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="275dp"
                android:layout_marginTop="8dp"
                android:background="@color/light_green"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:paddingBottom="12dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView_poster_w154"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <RatingBar
                        android:id="@+id/ratingBarPopularity"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="4dp"
                    android:layout_weight="6.50"

                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_original_title_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="4dp"
                        android:text="@string/original_title_header"
                        android:textColor="@color/light_gray"/>

                    <TextView
                        android:id="@+id/tv_original_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="4dp"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>


                    <TextView
                        android:id="@+id/tv_genre_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:paddingLeft="4dp"
                        android:text="@string/genre_header"
                        android:textColor="@color/light_gray"/>

                    <TextView
                        android:id="@+id/tv_genre_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="4dp"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tv_releasedate_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:paddingLeft="4dp"
                        android:text="@string/releasedate_header"
                        android:textColor="@color/light_gray"/>

                    <TextView
                        android:id="@+id/tv_release_date_actor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="4dp"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tv_vote_average_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:paddingLeft="4dp"
                        android:text="@string/vote_average__header"
                        android:textColor="@color/light_gray"/>

                    <TextView
                        android:id="@+id/tv_vote_average_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="4dp"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>


                    <TextView
                        android:id="@+id/tv_vote_count_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:paddingLeft="4dp"
                        android:text="@string/vote_count__header"
                        android:textColor="@color/light_gray"/>

                    <TextView
                        android:id="@+id/tv_vote_count_header_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:elegantTextHeight="true"
                        android:paddingBottom="4dp"
                        android:paddingLeft="4dp"
                        android:singleLine="false"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="8dp"
                android:background="@color/light_green"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_tag_line_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="4dp"
                    android:text="@string/tag_line_header"
                    android:textColor="@color/light_gray"/>

                <TextView
                    android:id="@+id/tv_tag_line_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="4dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>


                <TextView
                    android:id="@+id/tv_tag_overview_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:paddingLeft="4dp"
                    android:text="@string/overview_header"
                    android:textColor="@color/light_gray"/>

                <TextView
                    android:id="@+id/tv_overview_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp"
                    android:paddingLeft="4dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:background="@color/light_green"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_production_companies_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="4dp"
                    android:text="@string/production_companies_header"
                    android:textColor="@color/light_gray"/>

                <TextView
                    android:id="@+id/tv_production_companies_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="4dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>


                <TextView
                    android:id="@+id/tv_production_countries_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:paddingLeft="4dp"
                    android:text="@string/production_countries_header"
                    android:textColor="@color/light_gray"/>

                <TextView
                    android:id="@+id/tv_production_countries_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp"
                    android:paddingLeft="4dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
            </LinearLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:background="@color/light_green"
                android:shrinkColumns="true">

                <TableRow android:weightSum="3">

                    <TextView
                        android:layout_weight="1"
                        android:padding="4dp"
                        android:text="@string/budget"/>

                    <TextView
                        android:layout_weight="1"
                        android:padding="4dp"
                        android:text="@string/runtime"/>

                    <TextView
                        android:layout_weight="1"
                        android:padding="4dp"
                        android:text="@string/revenue"/>

                </TableRow>

                <TableRow android:weightSum="3">

                    <TextView
                        android:id="@+id/cell_budget"
                        android:layout_weight="1"
                        android:padding="4dp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/cell_runtime"
                        android:layout_weight="1"
                        android:padding="4dp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/cell_revenue"
                        android:layout_weight="1"
                        android:padding="4dp"
                        android:textStyle="bold"/>

                </TableRow>

            </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="4dp"
                android:background="@color/light_green"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_homepage_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:paddingLeft="4dp"
                    android:text="@string/homepage_header"
                    android:textColor="@color/light_gray"/>

                <TextView
                    android:id="@+id/tv_homepage_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:clickable="true"
                    android:paddingBottom="4dp"
                    android:paddingLeft="4dp"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold"/>
            </LinearLayout>


        </LinearLayout>


    </com.pundroid.bestmoviesapp.utils.ScrollViewExt>

</RelativeLayout>



